Fix back link overlapping

--- a/components/Customers/Customers.module.scss
+++ b/components/Customers/Customers.module.scss
@@ -88,7 +88,6 @@
   width: 100%;
   justify-content: space-between;
   margin-top: 80px;
-  margin-bottom: 280px;
 
   .casePageLink {
     width: 187px;
@@ -102,8 +101,7 @@
   display: flex;
   align-items: flex-start;
   max-width: 1200px;
-  margin: 0 auto;
-  margin-top: 122px;
+  margin: 122px 32px 240px 280px;
   gap: 118px;
 }
 
